--- a/scrape-custom-service/01-demo-shop.yaml
+++ b/scrape-custom-service/01-demo-shop.yaml
@@ -658,7 +658,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: gcr.io/google-samples/microservices-demo/adservice:v0.2.0
+        image: gcr.io/google-samples/microservices-demo/adservice:v0.2.1
         ports:
         - containerPort: 9555
         env:
@@ -699,8 +699,8 @@ spec:
     port: 9555
     targetPort: 9555
 ---
+apiVersion: networking.k8s.io/v1
 kind: Ingress
-apiVersion: networking.k8s.io/v1beta1
 metadata:
   name: demo-shop
 spec:
@@ -708,7 +708,11 @@ spec:
     - host: sslip.io
       http:
         paths:
-          - path: /
+          - pathType: Prefix
+            path: /
             backend:
-              serviceName: frontend
-              servicePort: 80
+              service:
+                name: frontend
+                port:
+                  number: 80
+
